# Feistel-Network

./: CMakeLists.txt  Makefile  README.md  bucket.cpp  bucket.h  bucket32  bucket8  common.h  enc  enc.cpp  merge.cpp  oq  oq.cpp  oqsort  res  sort  sort3  test3.sh
include/: bitonic.cpp  bitonic.h  bucket.cpp  bucket.h  common.cpp  common.h  merge.cpp  merge.h  oq.cpp  oq.h
